= RubyMotion 2.25 =

  * Fixed a bug where KVC property validation methods defined in Ruby would not
    be compiled with the appropriate (Pointer) types.
  * Added some introspection support to `ImmediateRef'. It can now report the
    actual class, its methods, and a inspect description string.
  * Fixed a bug where Ruby methods defined on Objective-C tagged pointer
    objects could not call methods on itself.
  * Added support for Xcode 5.1 and iOS 7.1 final.
  * Upgraded the compiler to LLVM 3.4.
  * [iOS] Made `tap' test helper work with `UISwitch'.
  * Fixed a bug where the cycle detector did not work for Array/Hash objects.
  * Improved Object#instance_variable_set performance. ~20% faster.
  * Improved method dispatcher performance. ~5% faster.

= RubyMotion 2.24 =

  * Fixed a regression introduced by the last build where environments running
    versions of Ruby not handling source files as unicode by default would be
    broken due to the presence of a unicode character in one of the files.

= RubyMotion 2.23 =

  * Added support for objects conforming to the Subscripting interface
    (Objective-C Literals).
  * Fixed a bug with the `motion activate' CLI command. Thanks to Joffrey
    Jaffeux for the patch.
  * Fixed a regression when specifying external templates to `motion create'.
  * Fixed a bug where WeakRef.new would cause a crash when nil, true, false,
    Fixnum or Float objects were passed.
  * Fixed a bug where `vendor_project' with `:static' did not reuse `:cflags'
    for the BridgeSupport generation.
  * Fixed a bug where manually created BridgeSupport metadata files were no
    longer being used by the compiler. Now if one exists in the root of the lib
    dir, that will be used instead of one in the platform-specific build dir.
  * Added temporary files that are sometimes generated by the REPL to the
    default `gitignore' file. Thanks to Mark Rickert for the patch (pull
    request #150).